# code-count

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  TODO.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  report.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
docs/superpowers/plans/: 2026-06-24-markdown-html-report-templates.md  2026-06-24-tui-visual-polish-v0-2.md
scripts/: install.ps1  package-windows.ps1  uninstall.ps1
