[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/tui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/TheLostRiver/code-count"

[workspace.dependencies]
anyhow = "1.0.98"
assert_cmd = "2.0.17"
clap = { version = "4.5.40", features = ["derive"] }
code-count-core = { path = "crates/core" }
code-count-tui = { path = "crates/tui" }
crossterm = "0.29.0"
predicates = "3.1.3"
ratatui = "0.30.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
toml = "0.8.23"
tokei = "14.0.0"
