[package]
name = "code-count"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "code-count"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
code-count-core.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
