[package]
name = "code-count-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
code-count-core.workspace = true
crossterm.workspace = true
ratatui.workspace = true

[dev-dependencies]
tempfile.workspace = true
